k8s/frinsultgate.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: frinsult
  name: gate
  labels:
    app: gate
spec:
  ports:
  - nodePort: 32081
    port: 8080
    protocol: TCP
    targetPort: 8080
  type: NodePort
  selector:
    app: gatesrv
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: frinsult
  name: gate
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: gatesrv
    spec:
      serviceAccountName: micro-services
      containers:
        - name: gatesrv
          command: [
          "/bin/fg",
          "--server_address=0.0.0.0:8080",
          "--broker_address=0.0.0.0:10001"
          ]
          image: muaddib/go.hands.two.gate
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: gate-port
